- Fixed off-by-one typo in ezmlm-weed causing an "out of memory" error.

ezmlm-idx-7.2.1, 2014-05-09
===========================

- Fixed header address extraction in the presence of double quotes.

- Fixed rewritefrom feature to run if the list is not indexed.

ezmlm-idx-7.2.0, 2014-05-02
===========================

- Added <#C#>, <#T#>, and <#X#> substitutions for (un)subscribe
  confirmation emails, replaced with the hash code, time stamp, and
  action respectively.

- Added option to ezmlm-[un]sub to use a tag other than "manual" in Log.

- Added option to ezmlm-manage to show what response is being sent.

- Added optional rewritefrom feature to ezmlm-send, automatically
  enabled when the sender has a "reject" DMARC policy.

- Fixed behavior of ezmlm-manage -Q flag to match man page.

- Fixed ezmlm-import failing to flush output to the last message,
  and enhanced it to allow reading the mbox from stdin.
  Thanks to Tullio Andreatta.

- Fixed ezmlm-manage notifying target of an unsubscribe by a remote
  administrator when the -N option is in use.
  Thanks to Nebojsa Milovanovic.

- Fixed ezmlm-archive corrupting output index files.

- Internal rewrite of SQL modules to merge all common code.

ezmlm-idx-7.1.1, 2010-11-18
===========================

- Fixed bug in getln2 function that prevented error handling.

- Fixed bug in ezmlm-cron that prevented parsing of spaces.

- Fixed unclosed file descriptor on error path in ezmlm-cgi.

ezmlm-idx-7.1.0, 2010-11-03
===========================

- Added support for SQLite3 subscriber databases.
  Thanks to Mike Tedder.

- Added support for wildcard addresses in all address databases.

- Added support for qmqpservers to all ezmlm-idx programs.

- Added support for decoding sender addresses mangled with a BATV "btv1" tag.

- Added support for custom subject lines to ezmlm-get (for digests).

- Added a new "omitbottom" control file, equivalent to the -B option for
  both ezmlm-get and ezmlm-manage.
