@@ -2,7 +2,8 @@
 
   sendfrom() {
     cat >"$TMP" <<EOF
-From: ${1:-test@example.org}
+From: $1
+Reply-To: $1
 Subject: test post
 X-Test-Header: one
 Content-Length: zip
@@ -15,16 +16,17 @@ EOF
 
   touch "$DIR"/addtrailer
   LOCAL="$LIST"
-  sendfrom
+  sendfrom test1@example.org
 
   grephdr_list 1
   grephdr Precedence: bulk
   grephdr X-No-Archive: yes
   grephdr Delivered-To: "mailing list ${LIST}@${HOST}"
-  grephdr From: test@example.org
+  grephdr From: test1@example.org
   grephdr Subject: '\[PFX\] test post'
   grephdr X-Test-Header: one
   grephdr Sender: "<${LIST}@${HOST}>"
+  grephdr Reply-To: test1@example.org
   grephdr_empty
 
   grepbody Local: "$LOCAL"
@@ -37,40 +39,20 @@ EOF
   fatal "failed to produce post"
   grephdr Subject: 'test post'
 
-  touch "$DIR"/rewritefrom
+  touch "$DIR"/replytolist
+  sendfrom test2@example.org
 
-  sendfrom '"My Name 1" <test1@example.org>'
-  grephdr From: "\"My Name 1 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: '"My Name 1" <test1@example.org>'
+  grephdr_list 1
+  grephdr Precedence: bulk
+  grephdr X-No-Archive: yes
+  grephdr Delivered-To: "mailing list ${LIST}@${HOST}"
+  grephdr From: test2@example.org
+  grephdr Subject: 'test post'
+  grephdr X-Test-Header: one
+  grephdr Sender: "<${LIST}@${HOST}>"
+  grephdr Reply-To: "<${LIST}@${HOST}>"
+  grephdr_empty
 
-  sendfrom '"My Name 2" test2@example.org'
-  grephdr From: "\"My Name 2 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: '"My Name 2" test2@example.org'
-
-  sendfrom 'My Name 3 <test3@example.org>'
-  grephdr From: "\"My Name 3 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: 'My Name 3 <test3@example.org>'
-
-  sendfrom 'test4@example.org (My Name 4)'
-  grephdr From: "\"My Name 4 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: 'test4@example.org \(My Name 4\)'
-
-  sendfrom 'test5@example.org'
-  grephdr From: "\"test5.example.org via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: 'test5@example.org'
-
-  rm -f "$DIR"/rewritefrom
-
-  sendfrom 'test6@yahoo.com'
-  grephdr From: "\"test6.yahoo.com via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: 'test6@yahoo.com'
-
-  sendfrom '"My Name 7" <test7@yahoo.com>'
-  grephdr From: "\"My Name 7 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: '"My Name 7" <test7@yahoo.com>'
-
-  sendfrom 'My Name 8 <test8@yahoo.com>'
-  grephdr From: "\"My Name 8 via ${LIST}\" <${LIST}@${HOST}>$"
-  grephdr Cc: 'My Name 8 <test8@yahoo.com>'
+  rm -f "$DIR"/replytolist
 
   echo OK
